--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "telegram-clicker",
   "version": "1.0.0",
-  "main": "index.js & bot.js",
+  "main": "index.js & api/bot.js",
   "scripts": {
     "start": "node server.js & node api/bot.js",
     "preinstall": "rm -rf node_modules/sqlite3 && npm install sqlite3 --build-from-source",
