--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "telegram-clicker",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.js & api/bot.js",
   "scripts": {
-    "start": "node server.js",
-    "preinstall": "npm uninstall sqlite3 && npm install sqlite3 --build-from-source"
+    "start": "node server.js & node api/bot.js",
+    "preinstall": "rm -rf node_modules/sqlite3 && npm install sqlite3 --build-from-source",
+    "postinstall": "npm rebuild sqlite3",
+    "db:init": "node database/initDatabase.js",
+    "db:drop": "node database/dropDatabase.js"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +15,8 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
-    "node-telegram-bot-api": "^0.63.0",
-    "sqlite3": "^5.1.7"
+    "node-telegram-bot-api": "^0.66.0",
+    "sqlite3": "^5.1.7",
+    "node-fetch": "^2.6.1"
   }
 }
