--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "telegram-clicker",
   "version": "1.0.0",
-  "main": "index.js & api/bot.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js & node api/bot.js",
+    "start": "node server.js",
     "postinstall": "npm rebuild sqlite3",
     "db:init": "node database/initDatabase.js",
     "db:drop": "node database/dropDatabase.js"
